ATLAS-2394: tests updated